--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -31,20 +31,20 @@ jobs:
         echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-        ssh -o StrictHostKeyChecking=no ec2-user@3.108.73.171 << 'EOF'
+        ssh -o StrictHostKeyChecking=no ec2-user@13.233.70.227 << 'EOF'
         # Check if directory exists, if not, clone it
-        if [ ! -d "/home/ec2-user/dealsdray-server" ]; then
+        if [ ! -d "/home/ec2-user/server" ]; then
           echo "Directory not found. Cloning the repository..."
-          git clone https://github.com/Venu1433697/dealsdray-server.git /home/ec2-user/dealsdray-server
+          git clone https://github.com/Venu1433697/expense.git /home/ec2-user/server
         else
           echo "Directory exists. Pulling latest changes..."
         fi
         
           
         # Navigate to the app directory on EC2
-        cd /home/ec2-user/dealsdray-server
+        cd /home/ec2-user/server
         # Pull the latest changes from the repository
-        git remote add origin https://github.com/Venu1433697/dealsdray-server.git
+        git remote add origin https://github.com/Venu1433697/expense.git
         git pull origin main
         # Install server dependencies on EC2
         cd server
