--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -31,7 +31,9 @@ jobs:
         echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-        ssh -o StrictHostKeyChecking=no ec2-user@13.233.70.227 << 'EOF'
+
+        
+        ssh -o StrictHostKeyChecking=no id_rsa ec2-user@13.233.70.227 << 'EOF'
         # Check if directory exists, if not, clone it
         if [ ! -d "/home/ec2-user/server" ]; then
           echo "Directory not found. Cloning the repository..."
