--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -35,20 +35,16 @@ jobs:
         
         ssh -o StrictHostKeyChecking=no ec2-user@35.154.227.126 << 'EOF'
         # Check if directory exists, if not, clone it
-        if [ ! -d "/home/ec2-user/server" ]; then
+        if [ ! -d "/home/ec2-user/expense-server" ]; then
           echo "Directory not found. Cloning the repository..."
-          git clone https://github.com/Venu1433697/expense.git /home/ec2-user/server
+          git clone https://github.com/Venu1433697/expense.git /home/ec2-user/expense-server
         else
           echo "Directory exists. Pulling latest changes..."
         fi
         
           
         # Navigate to the app directory on EC2
-        cd /home/ec2-user/server
+        cd /home/ec2-user/expense-server
         # Pull the latest changes from the repository
         git pull origin production
-        # Install server dependencies on EC2
-        cd server
-        npm install
-        pm2 restart all  # Restart Node.js server using PM2 (if you're using it)
-
+       
